[workspace]
members = [".", "macros"]

[package]
name = "skuld"
version = "0.1.0"
edition = "2021"

[features]
tokio = ["dep:tokio"]

[dependencies]
skuld-macros = { path = "macros" }
inventory = "0.3"
libtest-mimic = "0.8"
# Needed for clap::Parser trait (Arguments::parse_from); libtest-mimic doesn't re-export it.
clap = { version = "4", features = ["derive"] }
tempfile = "3"
serde = { version = "1", features = ["derive"] }
serde_yml = "0.0.12"
tracing = "0.1"
# CRITICAL: DO NOT enable the "tracing-log" feature. It auto-installs a
# LogTracer on the first subscriber init, which mutates log::max_level
# globally. Downstream projects (bindreams/hole#147) have hit timeout
# regressions on Windows CI because of that mutation. We only want the
# env-filter + fmt layers.
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
tokio = { version = "1", features = ["rt"], optional = true }

[dev-dependencies]
skuld = { path = ".", features = ["tokio"] }
tokio = { version = "1", features = ["rt", "time", "net", "io-util"] }

[[test]]
name = "integration"
path = "tests/integration.rs"
harness = false
