[workspace]
members = [".", "macros", "xtask"]

[package]
name = "skuld"
version = "0.2.0"
edition = "2021"
authors = ["Anna Zhukova"]
description = "A test harness with runtime preconditions, per-test FD capture, and fixture injection"
license = "Apache-2.0"
license-file = "LICENSE.md"
repository = "https://github.com/bindreams/skuld"
homepage = "https://skuld.readthedocs.io"
documentation = "https://skuld.readthedocs.io"
readme = "README.md"
keywords = ["test", "harness", "fixture", "testing"]
categories = ["development-tools::testing"]

[features]
tokio = ["dep:tokio"]

[dependencies]
skuld-macros = { version = "=0.2.0", path = "macros" }
inventory = "0.3"
libtest-mimic = "0.8"
# Needed for clap::Parser trait (Arguments::parse_from); libtest-mimic doesn't re-export it.
clap = { version = "4", features = ["derive"] }
tempfile = "3"
serde = { version = "1", features = ["derive"] }
serde_yml = "0.0.12"
# Cross-platform anonymous pipe primitive, used by the per-test FD capture in
# src/capture.rs. Avoids reimplementing pipe()/CreatePipe() ourselves.
os_pipe = "1.2"
# Cross-process test coordination database for serial test scheduling.
rusqlite = { version = "0.39", features = ["bundled"] }
pest = "2"
pest_derive = "2"
# Boolean algebra primitives backing the canonical form of LabelFilter (BDD-based
# canonicalization, semantic equality, simplification). Parsing stays in pest;
# this crate provides Expr<T>, BDD<T>, and the Expr <-> BDD round-trip.
boolean_expression = "0.4"
tokio = { version = "1", features = ["rt"], optional = true }

[target.'cfg(unix)'.dependencies]
# dup/dup2/close for swapping stdout/stderr fds during per-test capture.
libc = "0.2"

[target.'cfg(windows)'.dependencies]
# Two parallel fd namespaces exist on Windows:
#   * CRT (libc::_dup/_dup2) — used by C libraries and FFI that write via stdio.
#   * Win32 console handles (GetStdHandle/SetStdHandle) — used by Rust's own
#     io::stdout()/io::stderr(), which bypass the CRT fd table entirely.
# We must swap both during capture or one stream silently escapes.
libc = "0.2"
windows = { version = "0.62", features = ["Win32_System_Console", "Win32_System_Threading"] }

[dev-dependencies]
skuld = { path = ".", features = ["tokio"] }
tokio = { version = "1", features = ["rt", "time", "net", "io-util"] }
# Regression tests install their own tracing subscribers and assert that
# events reach them (proving skuld no longer competes). Not used by skuld
# runtime code.
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
tracing-log = "0.2"
log = "0.4"
trybuild = "1"
# label_filter_cli.rs parses libtest-mimic's --format json output.
serde_json = "1"
# Property-based testing for LabelFilter canonicalization invariants.
proptest = "1"

[[test]]
name = "integration"
path = "tests/integration.rs"
harness = false

# Out-of-harness subprocess tests for the FD capture CLI behavior. Uses
# the standard libtest harness (not skuld) because skuld is the subject
# under test. Spawns the `capture_fixture` binary and asserts on its
# captured output.
[[test]]
name = "capture_cli"
path = "tests/capture_cli.rs"

[[test]]
name = "compile_errors"
path = "tests/compile_errors.rs"

# Subprocess test for cross-module duplicate-label detection. Spawns the
# `duplicate_labels` binary (two modules declaring the same label) and
# asserts the startup panic mentions both source locations.
[[test]]
name = "duplicate_labels_cli"
path = "tests/duplicate_labels_cli.rs"

# Minimal skuld-powered binary spawned by capture_cli.rs subprocess
# tests. Not a real product binary; only exists so CARGO_BIN_EXE_*
# resolves to a path we can feed to Command::new.
#
# Source lives under tests/support_bins/ (not directly in tests/) to
# keep Cargo from auto-detecting it as an integration-test target,
# which would collide with this [[bin]] declaration.
[[bin]]
name = "capture_fixture"
path = "tests/support_bins/capture_fixture/main.rs"
test = false
doc = false

# Binary spawned by duplicate_labels_cli.rs. Declares `DUP` twice via
# sibling modules to exercise `check_label_registry`.
[[bin]]
name = "duplicate_labels"
path = "tests/support_bins/duplicate_labels/main.rs"
test = false
doc = false

# End-to-end tests for SKULD_LABELS filtering. Spawns the
# `label_filter_fixture` binary with various SKULD_LABELS values and
# verifies which tests collect/run via marker files and --format json
# output. Standard libtest harness; skuld is the subject under test.
[[test]]
name = "label_filter_cli"
path = "tests/label_filter_cli.rs"

# Subject fixture for label_filter_cli.rs. Contains a diverse zoo of
# labeled skuld tests and known-name dynamic tests. Each test writes a
# marker file on body entry so the driver can detect which actually ran.
[[bin]]
name = "label_filter_fixture"
path = "tests/support_bins/label_filter_fixture/main.rs"
test = false
doc = false
