[package]
name = "skuld-macros"
version = "0.1.0"
edition = "2021"
authors = ["Anna Zhukova"]
description = "Procedural macros for the skuld test harness"
license = "Apache-2.0"
repository = "https://github.com/bindreams/skuld"
documentation = "https://skuld.readthedocs.io"
keywords = ["test", "harness"]
categories = ["development-tools::testing"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
