[package]
name = "xtask"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
gix = { version = "0.81.0", default-features = false, features = ["revision", "sha1"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
